# singularity_4points

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Realisitic configuration of 4 points-1_ok.xlsx  config.yaml  package.xml  test_sphere.cpp
analyse/: spheres.py  spheres.sh
analyze/: compare_estim.sh  energy.py  estims3.py  rose.py  spheres.py  spheres.sh
include/: pose_estim.h  scene.h  statistics.h  task.h
src/: best_orientation_demo.cpp  energy.cpp  energy.cpp.bak  pose_estim.cpp  rose.cpp  scene.cpp  sphere.cpp  sphere_tools.h  statistics.cpp  visual_servo.cpp
